# CheckersCpp

./: .clang-format  CMakeLists.txt
src/: App.cpp  App.hpp  Board.cpp  Board.hpp  Constants.hpp  Game.cpp  Game.hpp  Move.cpp  Move.hpp  Piece.cpp  Piece.hpp  PieceList.cpp  PieceList.hpp  PieceManager.cpp  PieceManager.hpp  Playermanager.cpp  Playermanager.hpp  SDL_Util.cpp  SDL_Util.hpp  Square.cpp  Square.hpp  main.cpp
